[package]
name = "nakamoto-net-mio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nakamoto-net = { version = "0.4.0" }
crossbeam-channel = { version = "0.5.6" }
mio = { version = "0.8.5", features = ["os-poll", "net"] }
socket2 = { version = "0.4" }
libc = { version = "0.2" }
log = { version = "0.4" }

[dev-dependencies]
lazy_static = "1.4"
fastrand = "1.3.5"
quickcheck = { version = "1", default-features = false }
quickcheck_macros = "1"
